fixed activity title z-index problem

--- a/activity.css
+++ b/activity.css
@@ -25,7 +25,7 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
-  z-index: 100;
+  z-index: 90;
 }
 
 body.modal-open{
